# spara_reporting

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  REUSE.toml  mkdocs.yml  poetry.lock.license  pyproject.toml
docs/: explanation.md  how_to_guides.md  index.md  reference.md  spara_reporting.md
spara_reporting/: __init__.py
